[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
leptos_meta = "0.6"
leptos_router = "0.6"
rand = "0.8.5"
colored = "2.0.0"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1